--- a/SnesConnectorApp/App.axaml
+++ b/SnesConnectorApp/App.axaml
@@ -1,14 +1,25 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:snesConnectorApp="clr-namespace:SnesConnectorApp"
+             xmlns:reactiveUi="clr-namespace:ReactiveUI;assembly=ReactiveUI"
              x:Class="SnesConnectorApp.App"
-             RequestedThemeVariant="Default">
+             RequestedThemeVariant="Dark">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
-    <Application.Resources>
-        <snesConnectorApp:EnumDescriptionConverter x:Key="EnumDescriptionConverter" />
-    </Application.Resources>
-    <Application.Styles>
-        <SimpleTheme />
-    </Application.Styles>
+     <Application.DataTemplates>
+         <snesConnectorApp:ViewLocator/>
+     </Application.DataTemplates>
+
+     <Application.Resources>
+         <ResourceDictionary>
+             <ResourceDictionary.MergedDictionaries>
+                 <ResourceInclude Source="avares://AvaloniaControls/Themes/Resources.axaml"></ResourceInclude>
+             </ResourceDictionary.MergedDictionaries>
+         </ResourceDictionary>
+     </Application.Resources>
+     
+     <Application.Styles>
+         <SimpleTheme />
+         <StyleInclude Source="avares://AvaloniaControls/Themes/Themes.axaml"></StyleInclude>
+     </Application.Styles>
 </Application>
